<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forntpage.members_projrct.FriendInsertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivSpot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/no_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTakePicture" />

            <Button
                android:id="@+id/btPickPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPickPicture" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/textSpotName"
                android:inputType="text"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/textSpotPhone"
                android:inputType="phone"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/textSpotAddress"
                android:inputType="text"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/textSpotWeb"
                android:inputType="textUri"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <Button
                android:id="@+id/btFinishInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textInsert" />

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCancel" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>