<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forntpage.members_projrct.FriendUpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_updateFriend_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/no_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_updateFriend_TakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textTakePicture" />

            <Button
                android:id="@+id/bt_updateFriend_PickPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textPickPicture" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_updateFriend_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="請輸入好友名稱"
                android:inputType="text"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_updateFriend_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="請輸入好友電話"
                android:inputType="phone"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_updateFriend_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="請輸入好友地址"
                android:inputType="text"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_updateFriend_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="請輸入好友信箱"
                android:inputType="textUri"
                android:textColor="#0000FF" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <Button
                android:id="@+id/bt_updateFriend_Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textInsert" />

            <Button
                android:id="@+id/bt_updateFriend_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textCancel" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>